--- a/index.css
+++ b/index.css
@@ -165,11 +165,11 @@ h3 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.7);
     padding-bottom: 20px;
-    width: 100%;
-    height: 36vh;
+    width: 94%;
+    height: 48vh;
+    background: white;
     border-radius: 20px;
     margin-top: 50%;
   }
@@ -193,7 +193,6 @@ h3 {
     color: white;
     width: 100%;
     padding-bottom: 25px;
-    background: brown;
     display: flex;
     flex-direction: column;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9);
@@ -233,9 +232,17 @@ h3 {
     height: 45vw;
     border: 1px solid white;
   }
+
+  .card h1 {
+    font-weight: 100;
+    font-size: 15px;
+    font-family: sans-serif;
+    color: rgb(178, 176, 176);
+  }
+
   .star h1 {
-    font-size: 5vh;
-    font-weight: 600;
+    font-size: 3.5vh;
+    font-weight: 400;
   }
 
   .Master {
