--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body {
   flex-direction: column;
 }
 main {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.7);
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.7); */
   padding-bottom: 20px;
   width: 50vw;
   height: 71.3vh;
@@ -24,7 +24,7 @@ main {
   border-top-right-radius: 60px;
   width: 50vw;
   height: 35vh;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9);
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9); */
 }
 
 .border-red {
@@ -56,7 +56,6 @@ main {
   align-items: center;
   justify-content: center;
   height: 20vw;
-  border: 1px solid white;
 }
 .sec2 {
   background-color: rgb(70, 70, 70);
@@ -68,17 +67,16 @@ main {
   bottom: 70px;
   color: white;
   width: 50vw;
-  height: 50vh;
+  height: 40vh;
   display: flex;
   flex-direction: column;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9);
 }
 .card {
   font-family: sans-serif;
   display: flex;
   flex-direction: column;
   padding-left: 12%;
-  padding-top: 7%;
+  padding-top: 4%;
 }
 .card h1 {
   font-weight: 200;
@@ -149,7 +147,7 @@ h3 {
   font-size: xx-large;
 }
 .holder {
-  margin-top: 60px;
+  margin-top: 20px;
   align-items: center;
   justify-content: center;
 }
@@ -165,7 +163,6 @@ h3 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.7);
     padding-bottom: 20px;
     width: 94%;
     height: 45vh;
@@ -180,7 +177,6 @@ h3 {
     border-top-right-radius: 60px;
     width: 100%;
     height: 30vh;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9);
   }
   .sec2 {
     background-color: rgb(70, 70, 70);
@@ -192,10 +188,9 @@ h3 {
     bottom: 70px;
     color: white;
     width: 100%;
-    padding-bottom: 25px;
+    padding-bottom: 24px;
     display: flex;
     flex-direction: column;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9);
   }
 
   .border-red {
@@ -208,7 +203,6 @@ h3 {
     align-items: center;
     justify-content: center;
     height: 45vw;
-    border: 1px solid white;
   }
 
   .border-red img {
@@ -230,7 +224,14 @@ h3 {
     align-items: center;
     justify-content: center;
     height: 45vw;
-    border: 1px solid white;
+  }
+
+  .card {
+    font-family: sans-serif;
+    display: flex;
+    flex-direction: column;
+    padding-left: 7%;
+    margin-top: 7%;
   }
 
   .card h1 {
@@ -280,7 +281,7 @@ h3 {
   }
 
   .holder {
-    margin-top: 60px;
+    margin-top: 20px;
     align-items: center;
     justify-content: center;
   }
