--- a/index.css
+++ b/index.css
@@ -237,8 +237,8 @@ h3 {
   .card h2 {
     padding-right: 20px;
     color: rgb(178, 176, 176);
-    font-weight: 500;
-    font-family: sans-serif;
+    font-weight: 200;
+    font-family: 'Courier New', Courier, monospace;
     padding-right: 50px;
     font-size: 15px;
   }
